--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.bootcss.com/highlight.js/8.0/styles/monokai_sublime.min.css" rel="stylesheet" />
     <script src="https://cdn.bootcss.com/highlight.js/8.0/highlight.min.js"></script>
-    <script src="//at.alicdn.com/t/font_1493856_z3lsukdve1.js"></script>
+    <script src="//at.alicdn.com/t/font_1493856_w12psaovkah.js"></script>
     <script>
       hljs.initHighlightingOnLoad()
     </script>
@@ -37,7 +37,7 @@
         }
       }
     </style>
-    <title>React App</title>
+    <title>范剑峰的个人网站</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
